make input fields dynamic

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>   
-    <p>Scratch Converter</p>
+    <h1>Scratch Converter</h1>
     <button class="upload">Upload</button>
-    <button class="go">Convert and Download</button>
+    <p class="uploadText"></p>
+    <button class="add">Add</button>
+    <button class="remove">Remove</button>
+    <div class="keyfield">
+    </div>
+    <button class="download" disabled="true">Convert and Download</button>
+    <p class="status"></p>
     <input type="file" accept=".json" id="input"/>
     <script src="index.js"></script>
 </body>
