--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>   
-    <h1>Scratch Converter</h1>
-    <button class="upload">Upload</button>
+    <h1>Scratch Key Remapper</h1>
+    <button class="upload">Upload project.sb3</button>
     <p class="uploadText"></p>
     <button class="add">Add</button>
     <button class="remove">Remove</button>
