add readme to website

--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
     <div class="keyfield">
     </div>
     <button class="download" disabled="true">Convert and Download</button>
+    <p>
+How to use:<br>
+1. Download project of choice<br>
+2. Replace .sb3 extension with .zip<br>
+3. Open zip<br>
+4. Upload the "project.json" file inside the zip<br>
+5. Set old and new key values to whatever you like. Defaults to Scratch-3ds keybinds<br>
+6. Press Convert button. If nothing downloads, press it again<br>
+7. Replace old project.sb3 in zip with new project.sb3. Make sure it is still named "project.sb3"!<br>
+8. Rename zip file back to .sb3. Make sure you change the extension and not just the name!</p>
     <p class="status"></p>
+    <a href="https://github.com/Jocowl25/scratch-remap" target="_blank">Source code</a>
     <input type="file" accept=".json" id="input"/>
     <script src="index.js"></script>
 </body>
