--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <button class="download" disabled="true">Convert and Download</button>
     <p>
 How to use:<br>
-1. Download project of choice<br>
+1. Download Scratch project of choice<br>
 2. Replace .sb3 extension with .zip<br>
 3. Open zip<br>
 4. Upload the "project.json" file inside the zip<br>
