style buttons and inputs

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <h1>Scratch Key Remapper</h1>
     <button class="upload">Upload project.sb3</button>
     <p class="uploadText"></p>
+    <div class="inputSettingDiv">
     <button class="add">Add</button>
     <button class="remove">Remove</button>
+    </div>
     <div class="keyfield">
     </div>
     <button class="download" disabled="true">Convert and Download</button>
