more styling, add input leniency

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>   
     <h1>Scratch Key Remapper</h1>
     <button class="upload">Upload project.sb3</button>
-    <p class="uploadText"></p>
+    <p class="uploadText">No file uploaded!</p>
     <div class="inputSettingDiv">
-    <button class="add">Add</button>
-    <button class="remove">Remove</button>
+        <button class="add">Add</button>
+        <button class="remove">Remove</button>
     </div>
     <div class="keyfield">
     </div>
@@ -28,7 +28,8 @@ How to use:<br>
 7. Replace old project.sb3 in zip with new project.sb3. Make sure it is still named "project.sb3"!<br>
 8. Rename zip file back to .sb3. Make sure you change the extension and not just the name!</p>
     <p class="status"></p>
-    <a href="https://github.com/Jocowl25/scratch-remap" target="_blank">Source code</a>
+    <a href="https://github.com/Jocowl25/scratch-remap" target="_blank">Source Code on Github</a>
+    <p>Not affiliated with Scratch or the Scratch Team.</p>
     <input type="file" accept=".json" id="input"/>
     <script src="index.js"></script>
 </body>
