fix button text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>   
     <h1>Scratch Key Remapper</h1>
-    <button class="upload">Upload project.sb3</button>
+    <button class="upload">Upload project.json</button>
     <p class="uploadText">No file uploaded!</p>
     <div class="inputSettingDiv">
         <button class="add">Add</button>
