--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ How to use:<br>
     <p class="status"></p>
     <a href="https://github.com/Jocowl25/scratch-remap" target="_blank">Source Code on Github</a>
     <p>Not affiliated with Scratch or the Scratch Team. Uses <a href="https://gildas-lormeau.github.io/zip.js/" target="_blank">zip.js</a>.</p>
-    <input type="file" id="input"/>
+    <input type="file" id="input" accept=".zip,.sb3,.sb,.sb2"/>
     <script type="text/javascript" src="zip-full.min.js"></script>
     <script src="index.js"></script>
 </body>
