add zip.js license

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ How to use:<br>
     <a href="https://github.com/Jocowl25/scratch-remap" target="_blank">Source Code on Github</a>
     <p>Not affiliated with Scratch or the Scratch Team. Uses <a href="https://gildas-lormeau.github.io/zip.js/" target="_blank">zip.js</a>.</p>
     <input type="file" id="input" accept=".zip,.sb3,.sb,.sb2"/>
-    <script type="text/javascript" src="zip-full.min.js"></script>
+    <script type="text/javascript" src="zip.js/zip-full.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
